# stream_manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/stream_manager/: main.py
src/stream_manager/settings/: config.toml.template  env.py
